# probability

./: README.md  preflop-validation-commands.md
go-vue/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
go-vue/backend-go/: cards.go  cards_test.go  evaluate.go  exact_preflop.go  gen_preflop.go  go.mod  hand_class.go  main.go  preflop_table.go  simulate.go
go-vue/frontend-vue/: index.html  package.json  tsconfig.json  vite.config.ts
go-vue/frontend-vue/src/: App.vue  index.css
nextjs/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package.json
nextjs/app/: globals.css  layout.tsx  page.tsx
nextjs/app/api/equity/: route.ts
nextjs/app/api/preflop-table/: route.ts
nextjs/lib/: cards.test-run.ts  cards.ts  evaluate.ts  handClass.ts  preflopTable.ts  simulate.ts
nextjs/scripts/: generate-preflop-table.ts
rust-react/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
rust-react/backend-rust/: Cargo.toml
rust-react/backend-rust/src/: cards.rs  evaluate.rs  hand_class.rs  lib.rs  main.rs  preflop_table.rs  simulate.rs
rust-react/backend-rust/tests/: integration_test.rs
rust-react/frontend-react/: index.html  package.json
rust-react/frontend-react/src/: App.tsx
