[package]
name = "texas-equity-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
chrono = "0.4"
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs"] }
tokio = { version = "1", features = ["full"] }

